<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.mika.inmobiliariafinal.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_propiedades"
        android:name="com.mika.inmobiliariafinal.ui.propiedades.PropiedadesFragment"
        android:label="@string/menu_propiedades"
        tools:layout="@layout/fragment_propiedades" />

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.mika.inmobiliariafinal.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />
    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.mika.inmobiliariafinal.ui.pagos.PagosFragment"
        android:label="@string/menu_pagos"
        tools:layout="@layout/fragment_pagos" />
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.mika.inmobiliariafinal.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" />
    <fragment
        android:id="@+id/nav_cerrarsesion"
        android:name="com.mika.inmobiliariafinal.ui.salir.SalirFragment"
        android:label="@string/menu_cerrar"
        tools:layout="@layout/fragment_salir" />
</navigation>